fixed mozila double scroll

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -16,6 +16,7 @@ body {
 body #home-arc {
   position: relative;
   width: 100%;
+  overflow: hidden !important;
 }
  
 body #web-logo {
